--- a/index.html
+++ b/index.html
@@ -365,11 +365,15 @@
             <h2>💡 Como Funciona?</h2>
             
             <div class="video-container">
-                <div class="video-placeholder">
-                    📹 INSIRA SEU VÍDEO AQUI<br>
-                    (Substitua este div por seu iframe/vídeo)
-                </div>
-            </div>
+    <iframe 
+        src="https://streamable.com/0w0hy9" 
+        width="100%" 
+        height="450" 
+        frameborder="0" 
+        allowfullscreen 
+        style="border-radius: 15px;">
+    </iframe>
+</div>
 
             <div class="benefits">
                 <div class="benefit-card">
