--- a/index.html
+++ b/index.html
@@ -529,7 +529,6 @@
     <!-- Banner de Indicação -->
     <div class="indicacao-banner">
         <p>👤 INDICAÇÃO - <span class="nome-indicador">THAUANY AQUINO</span></p>
-        <p class="empresa">🏢 EMPRESA: IGREEN ENERGY</p>
     </div>
 
     <!-- Header com Logo -->
@@ -540,8 +539,9 @@
     <div class="container">
         <!-- Seção Hero -->
         <div class="hero-section">
-            <h1>⚡ CONEXÃO GREEN ⚡</h1>
-            <p class="subtitle">Cadastre sua Conta para ter Desconto de até 30% na sua Conta de Energia</p>
+            <h1>⚡ CONEXÃO IGREEN ⚡</h1>
+            <p class="subtitle">CADASTRE SUA CONTA PARA TER DESCONTO TODOS OS MESES NA SUA CONTA DE ENERGIA</p>
+            
         </div>
 
         <!-- Seção de Vídeo -->
