--- a/index.html
+++ b/index.html
@@ -3,7 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <title>iGreen Energy - Economize até 30% na sua Conta de Luz</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background: linear-gradient(135deg, #1a1a1a 0%, #0d0d0d 100%);
+            color: #fff;
+        }
+
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+
         /* Banner de Indicação */
         .indicacao-banner {
             background: linear-gradient(135deg, #00ff00 0%, #00cc00 100%);
@@ -531,11 +550,6 @@
     </div>
 
     <div class="container">
-        <!-- Seção Hero -->
-        <div class="hero-section">
-            <h1>⚡ CONEXÃO GREEN ⚡</h1>
-            <p class="subtitle">Cadastre sua Conta para ter Desconto de até 30% na sua Conta de Energia</p>
-        </div>
 
         <!-- Seção de Vídeo -->
         <div class="info-section">
