--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
             <!-- Título e CTA para o vídeo -->
             <div style="text-align: center; margin-bottom: 30px;">
                 <h2 style="color: #00ff00; font-size: 2.5em; margin-bottom: 15px; text-transform: uppercase;">
-                    🎬 Assista Este Vídeo de 1 Minuto
+                    Assista Este Vídeo de 1 Minuto
                 </h2>
                 <p style="color: #fff; font-size: 1.5em; font-weight: 600; margin-bottom: 10px;">
                     Descubra Como Economizar Até 30% na Sua Conta de Luz
