--- a/index.html
+++ b/index.html
@@ -26,42 +26,47 @@
         /* Banner de Indicação */
         .indicacao-banner {
             background: linear-gradient(135deg, #00ff00 0%, #00cc00 100%);
-            padding: 20px;
+            padding: 15px 20px;
             text-align: center;
             box-shadow: 0 5px 20px rgba(0, 255, 0, 0.4);
         }
 
         .indicacao-banner p {
-            color: #000;
-            font-size: 1.2em;
+            color: #fff;
             font-weight: bold;
-            margin: 5px 0;
+            margin: 0;
             text-transform: uppercase;
-            letter-spacing: 1px;
+            letter-spacing: 0.5px;
+            line-height: 1.5;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+        }
+
+        .indicacao-banner .licenciada {
+            font-size: 0.9em;
         }
 
         .indicacao-banner .nome-indicador {
-            font-size: 1.5em;
-            text-shadow: 2px 2px 4px rgba(255, 255, 255, 0.3);
+            font-size: 1.3em;
+            font-weight: 900;
         }
 
         .indicacao-banner .empresa {
-            font-size: 1.3em;
-            color: #1a1a1a;
+            font-size: 1.1em;
+            color: #fff;
         }
 
         /* Header com Logo */
         .header {
             text-align: center;
-            padding: 30px 0;
-            background: rgba(0, 0, 0, 0.3);
+            padding: 20px 0;
+            background: #ffffff;
         }
 
         .logo {
-            max-width: 300px;
+            max-width: 280px;
             width: 100%;
             height: auto;
-            margin-bottom: 10px;
+            margin: 0;
         }
 
         /* Seção Hero - Informativa */
@@ -92,9 +97,9 @@
         /* Área de Conteúdo Informativo */
         .info-section {
             background: rgba(255, 255, 255, 0.05);
-            padding: 50px 30px;
-            border-radius: 15px;
-            margin: 30px 0;
+            padding: 40px 30px;
+            border-radius: 0;
+            margin: 0;
             backdrop-filter: blur(10px);
         }
 
@@ -540,7 +545,8 @@
 <body>
     <!-- Banner de Indicação -->
     <div class="indicacao-banner">
-        <p>👤 INDICAÇÃO - <span class="nome-indicador">THAUANY AQUINO</span></p>
+        <p><span class="licenciada">Licenciada Autorizada iGreen Energy: Thaynara Matos</span><br>
+        <span class="nome-indicador">INDICAÇÃO: Thauany Aquino</span></p>
     </div>
 
     <!-- Header com Logo -->
@@ -549,15 +555,14 @@
     </div>
 
     <div class="container">
-
         <!-- Seção de Vídeo -->
         <div class="info-section">
             <!-- Título e CTA para o vídeo -->
             <div style="text-align: center; margin-bottom: 30px;">
-                <h2 style="color: #00ff00; font-size: 2.5em; margin-bottom: 15px; text-transform: uppercase;">
-                    Assista Este Vídeo de 1 Minuto
+                <h2 style="color: #00ff00; font-size: 2.3em; margin-bottom: 15px; text-transform: uppercase; font-weight: bold;">
+                    📹 ASSISTA ESTE VÍDEO DE 1 MINUTO
                 </h2>
-                <p style="color: #fff; font-size: 1.5em; font-weight: 600; margin-bottom: 10px;">
+                <p style="color: #fff; font-size: 1.4em; font-weight: 600; margin-bottom: 15px;">
                     Descubra Como Economizar Até 30% na Sua Conta de Luz
                 </p>
                 <p style="color: #00ff00; font-size: 1.2em; animation: pulse 2s infinite;">
