--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@
                     </iframe>
                 </div>
             </div>
-            <p class="disclaimer">Consulte regras e condições. Desconto flexível para cada estado.</p>
+            <p class="disclaimer">Após o cadastro nossa equipe irá entrar em contato.</p>
             
             <!-- Botão CTA após vídeo -->
             <div style="text-align: center; margin-top: 40px;">
