--- a/index.html
+++ b/index.html
@@ -597,26 +597,26 @@
             <div class="processo-steps">
                 <div class="step-card">
                     <div class="step-number">1</div>
-                    <h3>🌾 A Fazenda Produz</h3>
-                    <p>A energia solar é produzida em fazendas solares especializadas</p>
+                    <h3>🌾Energia Gerada nas Fazendas Solares</h3>
+                    <p>A energia solar é produzida em fazendas solares especializadas da iGreen</p>
                 </div>
 
                 <div class="step-card">
                     <div class="step-number">2</div>
                     <h3>⚡ Injeção na Rede</h3>
-                    <p>A energia é injetada na rede da distribuidora local</p>
+                    <p>A energia é injetada na sua distribuidora local (Equatorial)</p>
                 </div>
 
                 <div class="step-card">
                     <div class="step-number">3</div>
                     <h3>🏠 Distribuição</h3>
-                    <p>A distribuidora envia a energia para sua casa ou empresa</p>
+                    <p>A Equatorial envia a energia para sua casa ou empresa</p>
                 </div>
 
                 <div class="step-card">
                     <div class="step-number">4</div>
                     <h3>💰 Você Economiza</h3>
-                    <p>Sem investimentos e com desconto garantido todo mês</p>
+                    <p>Sem investimentos e com desconto garantido todos os meses PRA SEMPRE</p>
                 </div>
             </div>
 
