--- a/index.html
+++ b/index.html
@@ -630,15 +630,15 @@
 
         <!-- App iGreen Club -->
         <div class="app-section">
-            <h2>📱 APLICATIVO IGREEN CLUB</h2>
-            <p class="subtitle">Aplicativo exclusivo para clientes iGreen</p>
+            <h2>APÓS SE CADASTRAR VOCÊ TERÁ ACESSO AO APLICATIVO IGREEN CLUB</h2>
+            <p class="subtitle">Aplicativo exclusivo para os cadastrados iGreen</p>
 
             <div class="app-features">
-                <div class="feature-item">Acompanhamento da economia em tempo real</div>
+                <div class="feature-item">Acompanhamento do consumo e desconto em tempo real</div>
                 <div class="feature-item">Emissão da 2ª via do boleto</div>
-                <div class="feature-item">Descontos em + de 60 mil lojas pelo Brasil</div>
-                <div class="feature-item">Sorteio anual de 1 cabine de Cruzeiro com 2 pessoas</div>
-                <div class="feature-item">Acesso direto ao Suporte</div>
+                <div class="feature-item">Descontos em + de 60 mil lojas em todo Brasil</div>
+                <div class="feature-item">Indique seus amigos e ganhe 1% de desconto a cada</div>
+                <div class="feature-item">Suporte rápido e fácil</div>
                 <div class="feature-item">Cashback sustentável - ganhe até 100% de desconto indicando amigos e familiares</div>
             </div>
 
@@ -661,8 +661,7 @@
                 <div class="vantagem-item">100% digital</div>
                 <div class="vantagem-item">Cashback Sustentável podendo zerar a conta sem investimentos</div>
                 <div class="vantagem-item">Club de Benefícios com descontos exclusivos</div>
-                <div class="vantagem-item">Opção de instalação de placa solar para ter 95% de desconto</div>
-                <div class="vantagem-item">Até 30% de desconto para média e alta tensão</div>
+                <div class="vantagem-item">Desconto garantido para pequena, média e alta tensão</div>
                 <div class="vantagem-item">Amigo do meio ambiente</div>
             </div>
         </div>
