--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
             <!-- Título e CTA para o vídeo -->
             <div style="text-align: center; margin-bottom: 30px;">
                 <h2 style="color: #00ff00; font-size: 2.3em; margin-bottom: 15px; text-transform: uppercase; font-weight: bold;">
-                    📹 ASSISTA ESTE VÍDEO DE 1 MINUTO
+                    ASSISTA ESTE VÍDEO DE 1 MINUTO
                 </h2>
                 <p style="color: #fff; font-size: 1.4em; font-weight: 600; margin-bottom: 15px;">
                     Descubra Como Economizar Até 30% na Sua Conta de Luz
