--- a/index.html
+++ b/index.html
@@ -630,8 +630,8 @@
 
         <!-- App iGreen Club -->
         <div class="app-section">
-            <h2>APÓS SE CADASTRAR VOCÊ TERÁ ACESSO AO APLICATIVO IGREEN CLUB</h2>
-            <p class="subtitle">Aplicativo exclusivo para os cadastrados iGreen</p>
+            <h2>AO SE CADASTRAR VOCÊ TERÁ ACESSO AO APLICATIVO IGREEN CLUB</h2>
+            <p class="subtitle">Exclusivo para Contas iGreen</p>
 
             <div class="app-features">
                 <div class="feature-item">Acompanhamento do consumo e desconto em tempo real</div>
@@ -644,7 +644,7 @@
 
             <div style="text-align: center; margin-top: 40px;">
                 <p style="color: #00ff00; font-size: 1.2em; margin-bottom: 20px;">Disponível para download:</p>
-                <p style="font-size: 1.5em;">📱 Google Play | 🍎 App Store</p>
+                <p style="font-size: 1.5em;"> Google Play | App Store</p>
             </div>
         </div>
 
