--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
         <div class="info-section">
             <!-- Título e CTA para o vídeo -->
             <div style="text-align: center; margin-bottom: 30px;">
-                <h2 style="color: #00ff00; font-size: 2.3em; margin-bottom: 15px; text-transform: uppercase; font-weight: bold;">
+                <h2 style="color: #00ff00; font-size: 2.3em; margin-bottom: 10px; text-transform: uppercase; font-weight: bold;">
                     ASSISTA ESTE VÍDEO DE 1 MINUTO
                 </h2>
                 <p style="color: #fff; font-size: 1.4em; font-weight: 600; margin-bottom: 15px;">
@@ -576,16 +576,16 @@
                         src="https://streamable.com/e/0w0hy9" 
                         frameborder="0" 
                         allowfullscreen 
-                        style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border-radius: 15px;">
+                        style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border-radius: 10px;">
                     </iframe>
                 </div>
             </div>
             <p class="disclaimer">Após o cadastro nossa equipe irá entrar em contato.</p>
             
             <!-- Botão CTA após vídeo -->
-            <div style="text-align: center; margin-top: 40px;">
+            <div style="text-align: center; margin-top: 30px;">
                 <button class="cta-button" onclick="showForm()">
-                    ⚡ QUERO MEU DESCONTO ⚡
+                    QUERO MEU DESCONTO
                 </button>
             </div>
         </div>
@@ -621,9 +621,9 @@
             </div>
 
             <!-- Botão CTA após Como Funciona -->
-            <div style="text-align: center; margin-top: 50px;">
+            <div style="text-align: center; margin-top: 30px;">
                 <button class="cta-button" onclick="showForm()">
-                    ⚡ QUERO MEU DESCONTO ⚡
+                    QUERO MEU DESCONTO
                 </button>
             </div>
         </div>
