--- a/index.html
+++ b/index.html
@@ -866,7 +866,7 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="contaEnergia">Foto da Conta de Energia de 2025 <span class="required">*</span></label>
+                    <label for="contaEnergia">Envie uma foto da sua conta de energia mais recente 📸 <span class="required">*</span></label>
                     <div class="file-upload" onclick="document.getElementById('contaEnergia').click()">
                         <input type="file" id="contaEnergia" name="contaEnergia" accept="image/*" required onchange="updateFileName(this, 'fileNameConta')">
                         <label for="contaEnergia" class="file-upload-label">
@@ -877,7 +877,7 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="rgFrente">Foto do RG - FRENTE <span class="required">*</span></label>
+                    <label for="rgFrente">Envie uma foto do seu RG - FRENTE <span class="required">*</span></label>
                     <div class="file-upload" onclick="document.getElementById('rgFrente').click()">
                         <input type="file" id="rgFrente" name="rgFrente" accept="image/*" required onchange="updateFileName(this, 'fileNameFrente')">
                         <label for="rgFrente" class="file-upload-label">
@@ -888,7 +888,7 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="rgVerso">Foto do RG - VERSO <span class="required">*</span></label>
+                    <label for="rgVerso">Envie uma foto do seu RG - VERSO <span class="required">*</span></label>
                     <div class="file-upload" onclick="document.getElementById('rgVerso').click()">
                         <input type="file" id="rgVerso" name="rgVerso" accept="image/*" required onchange="updateFileName(this, 'fileNameVerso')">
                         <label for="rgVerso" class="file-upload-label">
