--- a/index.html
+++ b/index.html
@@ -989,7 +989,7 @@
                        "
                        onmouseover="this.style.transform='scale(1.05)'; this.style.boxShadow='0 15px 50px rgba(0, 255, 0, 0.7)';"
                        onmouseout="this.style.transform='scale(1)'; this.style.boxShadow='0 10px 40px rgba(0, 255, 0, 0.5)';">
-                        💬 FALAR COM NOSSA EQUIPE NO WHATSAPP
+                        Entre em contato no WhatsApp
                     </a>
                     
                     <p style="color: #888; font-size: 0.9em; margin-top: 30px;">
